--- a/spotify.html
+++ b/spotify.html
@@ -31,31 +31,44 @@
 
 		<main class="portfolio-piece">
 
-			<img src="">
-
 			<h1>Spotify</h1>
 			<h2>Redesigning the Login Experience</h2>
 
+			<img src="images/spotify/spotify-main.png">
+
 			<h3>Overview</h3>
 
-			<p></p>
+			<p>The goal of this project was to apply learned interaction design principles to improve a microinteraction within an existing website.</p>
+
+			<p>I chose to <b>redesign the Spotify log in/sign up pages to create a smooth, more transparent experience for users switching between two modes.</b></p>
 
 			<h3>Audience</h3>
 
-			<p></p>
+			<p>The audience for this project are people who:</p>
+
+			<ul>
+				<li>Are trying to log in to an existing Spotify account</li>
+
+				<li>Are trying to create a new Spotify account</li>
+
+			</ul>
 
 			<h3>Team/Role</h3>
 
-			<p></p>
+			<p>I worked alone on the overall project, although I did get feedback from a group of classmates on design decisions during the ideation phase. Their feedback helped me improve my overall design and gave insight on potential solutions that I otherwise could have overlooked.</p>
 
 			<h3>Constraints</h3>
 
-			<p></p>
+			<p><b>Short time period.</b> I had three weeks to define the problem, conduct research, create a prototype, and test it with users.</p>
+
+			<p><b>Limited tool knowledge.</b> This project was a great opportunity to improve my Ui and visual design skills. At this point in time, I was becoming familiar with prototyping tools like Sketch, inVIsion, an Adobe XD, but creating a smooth and visually appealing microinteraction proved to be a unique challenge.</p>
 
 			<h3>Design Process</h3>
 			<h4>Defining the Problem</h4>
 
-			<p></p>
+			<p>I didn’t start this project with this particular product or problem in mind. I began by doing a round of crazy 8s to think of some fun microinteractions to design. Once I did this, I decided I wanted to focus on a log in/sign up screen toggle.</p>
+
+			<p>I did another round of crazy 8s focusing on different ways to toggle between a log in/sign up page. This was a great way for me to get a lot of ideas out at once and get my creativity flowing.</p>
 
 			<h4>Research</h4>
 
