--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 	<head>
 
@@ -42,20 +42,20 @@
 
 			<div class="contact-grid">
 
-				<div class="contact-gridcard1">
+				<div class="contact-gridcard">
 					<h3>Email</h3>
 					<a href="mailto:rlongoriadesign@gmail.com">rlongoriadesign@gmail.com</a>
 
 				</div>
 
-				<div class="contact-gridcard2">
+				<div class="contact-gridcard">
 					<h3>Phone</h3>
 					<a href="tel:512-694-6388">512-694-6388</a>
 				</div>
 
-				<div class="contact-gridcard3">
+				<div class="contact-gridcard">
 					<h3>LinkedIn</h3>
-					<a href="https://linkedin.com/in/rachel-longoria/" target="_blank">https://linkedin.com/in/rachel-longoria/ </a>
+					<a href="https://linkedin.com/in/rachel-longoria/">https://linkedin.com/in/rachel-longoria/ </a>
 				</div>
 
 			</div>
@@ -64,7 +64,7 @@
 
 				<p class="form-requirement">* Required</p>
 
-				<div class="form-name">
+				<div class="field-pair">
 
 					<div class="firstname">
 						<label for="firstname">First Name *</label>
