--- a/freshpro.html
+++ b/freshpro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 	<head>
 
@@ -23,26 +23,34 @@
 
 			<nav>
 
-				<a class="disabled">prev</a> / <a href="spotify.html">next</a>
+				<a href="portfolio.html">Back to portfolio</a>
 
 			</nav>
 
 		</header>
 
 		<main class="portfolio-piece">
+			
+			<nav class="portfolio-second-nav">
+				
+				<a href="ecobags.html">prev</a> / <a href="spotify.html">next</a>
 
-			<h1>FreshPro</h1>
-			<h2>Helping shoppers reduce waste</h2>
+			</nav>
 
-			<img src="images/freshpro/freshpro-main.png">
+			<div class="primary-title">
+
+				<h1>FreshPro</h1>
+				<p>Helping shoppers reduce waste</p>
+
+			</div>
+
+			<img src="images/freshpro/freshpro-main.png" alt="FreshPro - Helping shoppers reduce waste">
 
 			<h3>Overview</h3>
 
 			<p>The goal of this project was to apply research methods and design principles to solve a user problem with a specific focus on user centered design. I did this by putting a strong emphasis on user feedback, design testing, and design iteration throughout the entire course of the 16-week project.</p>
 
 			<p>For this project, I designed an app called FreshPro that would <b>help users keep track of their produce, ultimately reducing waste at home and saving money at the grocery store.</b></p>
-
-			<br>
 
 			<h3>Audience</h3>
 
@@ -56,22 +64,20 @@
 
 			</ul>
 
-			<br>
-
 			<h3>Team/Role</h3>
 
 			<p>Although this was a project that I worked on alone, I did get weekly feedback from my professor throughout the duration of the project as well as monthly feedback from my classmates.</p>
-
-			<br>
 
 			<h3>Constraints</h3>
 
 			<p>This was the first project I worked on that challenged my skill proficiency with prototyping tools. During the duration of this project, I was simultaneously trying to get more comfortable with tools such as inVision, Adobe XD, and Sketch. I had to quickly learn how to be able to effectively communicate the visual design for this project.</p>
 
-			<br>
+			<div class="secondary-title">
 
-			<h3>Design Process</h3>
-			<h4>Defining the Problem</h4>
+				<h3>Design Process</h3>
+				<h4>Defining the Problem</h4>
+
+			</div>
 
 			<p>I didn’t start this project with this particular product or problem in mind. I began by creating a list of five problems that I personally deal with. Then I narrowed that list down to three, and finally settled on my chosen problem statement, which was “My produce keeps going bad.” This list was a good way for me to find a problem to solve that I was passionate about and one that I already knew existed.</p>
 
@@ -79,23 +85,21 @@
 
 			<h5>5 Whys</h5>
 
-			<p><b>“My produce keeps going bad.”</b><br>
+			<p>
+				<b>“My produce keeps going bad.”</b><br>
 
-			<b>Why?</b> Because I take too long to cook it<br>
+				<b>Why?</b> Because I take too long to cook it<br>
 
-			<b>Why?</b> Because I buy too much<br>
+				<b>Why?</b> Because I buy too much<br>
 
-			<b>Why?</b> Because I don’t know how much I need<br>
+				<b>Why?</b> Because I don’t know how much I need<br>
 
-			<b>Why?</b> Because I buy groceries on impulse<br>
+				<b>Why?</b> Because I buy groceries on impulse<br>
 
-			<b>Why?</b> Because I don’t keep track of my groceries<br>
+				<b>Why?</b> Because I don’t keep track of my groceries<br>
+			</p>
 
-			<br>
-
-			<b>“My produce keeps going bad</b> <em>because</em> <b>I don’t keep track of my groceries.”</b></p>
-
-			<br>
+			<p><b>“My produce keeps going bad</b> <em>because</em> <b>I don’t keep track of my groceries.”</b></p>
 
 			<h4>Research</h4>
 
@@ -103,9 +107,9 @@
 
 			<div class="portfolio-artifact3">
 
-				<img src="images/freshpro/persona-picture.png">
-				<img src="images/freshpro/persona-text.png">
-				<img src="images/freshpro/persona-molecule.png">
+				<img src="images/freshpro/persona-picture.png" alt="FreshPro - Persona">
+				<img src="images/freshpro/persona-text.png" alt="FreshPro - Persona Info">
+				<img src="images/freshpro/persona-molecule.png" alt="FreshPro- Persona Molecule">
 
 			</div>
 
@@ -113,9 +117,7 @@
 
 			<p>With this new perspective, I created a journey map that helped establish high and low points throughout the user experience. The journey map gave me a visual interpretation of their experience and I was able to focus on the pain points that could use improvement and would be the most practical to design for. My user’s journey had a positive reaction to making and using shopping lists, which surprised me and was different than my assumptions. I felt like the first main negative area was more about the shopping experience, and I felt that solving that problem wouldn’t change my user’s original problem. I focused on the second negative area of the journey map that I wanted to solve for, which was the point in time where food soils and gets thrown away.</p>
 
-			<img src="images/freshpro/journey-map.png">
-
-			<br>
+			<img src="images/freshpro/journey-map.png" alt="FreshPro - Journey Map">
 			
 			<h4>Design</h4>
 
@@ -123,17 +125,13 @@
 
 			<p>I ended up combining two different ideas for my design. The two highlights ideas used together could tackle the problem my users were experiencing in the simplest way possible. Simplicity was important to me because I didn’t want my users to feel the same negative feelings they have with their current experience.</p>
 
-			<img src="images/freshpro/crazy8s.png">
-
-			<br>
+			<img src="images/freshpro/crazy8s.png" alt="FreshPro - Crazy 8s">
 			
 			<h3>Testing</h3>
 
 			<p>Once I decided on a specific concept, I reached back out to my three interviewees for more feedback. I let them interact with some rough mockups of the design and asked questions about how they felt about it. My goal wasn’t to test the visuals of the design, but to test the user flow and what actions were necessary to create a positive experience. I got some great feedback that helped me improve the flow of my design and narrow down what expectations other potential users may have for the app.</p>
 
-			<img src="images/freshpro/1st-test.png">
-
-			<br>
+			<img src="images/freshpro/1st-test.png" alt="FreshPro - First test">
 
 			<h4>Feedback</h4>
 
@@ -163,7 +161,7 @@
 
 			<p>For the next round of testing, I reached out to three new people to interview for feedback. Since my original interviewees have seen the process from the beginning, I felt that new interviewees would give me a new perspective. This helped make sure I was designing for every user in mind, and not just the specific ones I’ve talked to.</p>
 
-			<img src="images/freshpro/final-twoscreens.jpg">
+			<img src="images/freshpro/final-twoscreens.jpg" alt="Freshpro - Final Screens">
 
 			<p>For my last round of interviews, I reached out to people from my first round of testers as well as my second round. I was excited to share the final product with them for two reasons:</p>
 
@@ -175,19 +173,15 @@
 
 			</ul>
 
-			<br>
-
 			<h4>Results</h4>
 
 			<div class="portfolio-artifact2">
 
-				<p>View my interactive prototype <a href="https://projects.invisionapp.com/share/TAUBRVD54HV%EF%BB%BF" target="_blank">Here</a>.
+				<p>View my interactive prototype <a href="https://projects.invisionapp.com/share/TAUBRVD54HV%EF%BB%BF">Here</a>.</p>
 
-				<br>
+				<p><br>Made with InVision.</p>
 
-				<br>Made with InVision.</p>
-
-				<img src="images/freshpro/prototype.gif">
+				<img src="images/freshpro/prototype.gif" alt="FreshPro - In Motion">
 
 			</div>
 
@@ -200,6 +194,14 @@
 			<p><b>Document more.</b> I had all of my deliverables, but I didn’t document how and why I personally got some of my process. It was difficult to go through 16 weeks of work and figure out what I was thinking during certain phases of the project.</p>
 
 			<p><b>Do testing with more users.</b> I was a little out of my comfort zone with reaching out to so many people, but I think it would have been more helpful if I did. Getting comfortable with user testing is definitely something I look forward to as I work on more projects because I loved working with all of my participants to build something centered around their needs.</p>
+
+			<br>
+
+			<nav class="portfolio-second-nav">
+				
+				<a href="ecobags.html">prev</a> / <a href="spotify.html">next</a>
+
+			</nav>
 
 		</main>
 
