--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 	<head>
 
@@ -46,7 +46,7 @@
 
 		<main class="about-page">
 
-			<img src="images/about-picture.jpg">
+			<img src="images/about-picture.jpg" alt="Rachel Longoria">
 
 			<div>
 
