--- a/spotify.html
+++ b/spotify.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 	<head>
 
@@ -23,28 +23,34 @@
 
 			<nav>
 
-				<a href="freshpro.html">prev</a> / <a href="ecobags.html">next</a>
+				<a href="portfolio.html">Back to portfolio</a>
 
 			</nav>
 
 		</header>
 
 		<main class="portfolio-piece">
+			
+			<nav class="portfolio-second-nav">
+				
+				<a href="freshpro.html">prev</a> / <a class="disabled">next</a>
 
-			<h1>Spotify</h1>
-			<h2>Redesigning the Login Experience</h2>
+			</nav>
 
-			<img src="images/spotify/spotify-main.png">
+			<div class="primary-title">
 
-			<br>
+				<h1>Spotify</h1>
+				<p>Redesigning the Login Experience</p>
+
+			</div>
+
+			<img src="images/spotify/spotify-main.png" alt="Spotify - Redesigning the login experience">
 
 			<h3>Overview</h3>
 
 			<p>The goal of this project was to apply learned interaction design principles to improve a microinteraction within an existing website.</p>
 
 			<p>I chose to <b>redesign the Spotify log in/sign up pages to create a smooth, more transparent experience for users switching between two modes.</b></p>
-
-			<br>
 
 			<h3>Audience</h3>
 
@@ -57,13 +63,9 @@
 
 			</ul>
 
-			<br>
-
 			<h3>Team/Role</h3>
 
 			<p>I worked alone on the overall project, although I did get feedback from a group of classmates on design decisions during the ideation phase. Their feedback helped me improve my overall design and gave insight on potential solutions that I otherwise could have overlooked.</p>
-
-			<br>
 
 			<h3>Constraints</h3>
 
@@ -71,10 +73,12 @@
 
 			<p><b>Limited tool knowledge.</b> This project was a great opportunity to improve my Ui and visual design skills. At this point in time, I was becoming familiar with prototyping tools like Sketch, inVIsion, an Adobe XD, but creating a smooth and visually appealing microinteraction proved to be a unique challenge.</p>
 
-			<br>
+			<div class="secondary-title">
 
-			<h3>Design Process</h3>
-			<h4>Defining the Problem</h4>
+				<h3>Design Process</h3>
+				<h4>Defining the Problem</h4>
+
+			</div>
 
 			<p>I didn’t start this project with this particular product or problem in mind. I began by doing a round of crazy 8s to think of some fun microinteractions to design. Once I did this, I decided I wanted to focus on a log in/sign up screen toggle.</p>
 
@@ -82,16 +86,14 @@
 
 			<div class="portfolio-artifact2">
 
-				<img src="images/spotify/crazy8-1.png">
-				<img src="images/spotify/crazy8-2.png">
+				<img src="images/spotify/crazy8-1.png" alt="Spotify - Crazy 8s">
+				<img src="images/spotify/crazy8-2.png" alt="Spotify - Crazy 8s">
 
 			</div>
 
 			<p>Even with all of these sketches, I still felt lost with what to do next and didn’t feel confident with this project. I realized that I started my project completely wrong. I was using crazy 8s to think of problems to solve, not solutions. In order for me to move forward, I needed to define my problem and what/who I was solving for.</p>
 
 			<p>I knew I wanted to focus on a log in/sign up toggle, so I started analyzing current experiences on different web pages. I wanted to find a specific web page to focus on so I could build my design based on what their specific users need and create visuals that match with their brand. After some browsing, I decided on the website for Spotify, a media-streaming service.</p>
-
-			<br>
 
 			<h4>Research</h4>
 
@@ -111,8 +113,6 @@
  			<p><b>Spotify’s login/sign up page has information that feels hidden, causing users to feel confused and untrusting.</b></p>
 
 			<p>I spent a lot of time on Spotify’s website as well as their app so I could gather some data on other interactions within their product. I also did some research on Spotify’s branding guidelines to see what constraints Spotify developers and designers may be working within and try to understand what drove the decisions for the current experience. I wanted to make sure any design decision I made would create a better experience for Spotify’s users without sacrificing the look and feel of Spotify’s brand.</p>
-			
-			<br>
 
 			<h4>Design/Testing</h4>
 
@@ -130,8 +130,8 @@
 
 			<div class="portfolio-artifact2">
 
-				<img src="images/spotify/testing1-1.png">
-				<img src="images/spotify/testing1-2.png">
+				<img src="images/spotify/testing1-1.png" alt="Spotify - Usability Testing 1">
+				<img src="images/spotify/testing1-2.png" alt="Spotify - Usability Testing 1">
 
 			</div>
 
@@ -139,8 +139,8 @@
 
 			<div class="portfolio-artifact2">
 
-				<img src="images/spotify/testing2-1.png">
-				<img src="images/spotify/testing2-2.png">
+				<img src="images/spotify/testing2-1.png" alt="Spotify - Usability Testing 2">
+				<img src="images/spotify/testing2-2.png" alt="Spotify - Usability Testing 2">
 
 			</div>
 
@@ -155,15 +155,11 @@
 
 			<p>I changed up the background colors with my user feedback in mind and brought it back to them for one final round of testing. There was a positive reaction to the color change and with that, I achieved all three of my design goals.</p>
 
-			<br>
-
 			<h4>Results</h4>
 
-			<p>View my interaction prototype <a href="https://xd.adobe.com/view/d2ce08da-6f2e-40a5-4abf-605d8cab84a5-a4ff/" target="_blank">here</a>.
+			<p>View my interaction prototype <a href="https://xd.adobe.com/view/d2ce08da-6f2e-40a5-4abf-605d8cab84a5-a4ff/">here</a>.
 
 			<p>Made with Adobe XD</p>
-
-			<br>
 
 			<h3>Retrospective</h3>
 
@@ -172,6 +168,14 @@
 			<p>Even if I’m handed a project with a well laid out problem definition, I would still like to take time to make sure the problem I’m solving for is the right one before moving on to designing potential solutions. Being 110% sure about your problem statement gives yourself and your team the confidence and knowledge to move forward.</p>
 
 			<p>If I had more time for this project, I would have loved to continue practicing with different prototyping tools to create a smoother transition.</p>
+
+			<br>
+
+			<nav class="portfolio-second-nav">
+				
+				<a href="freshpro.html">prev</a> / <a class="disabled">next</a>
+
+			</nav>
 
 		</main>
 
