--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 
 				<h1>Hi, I'm Rachel!</h1>
 
-				<p>I’m a UX design student with an interest in interaction and service design. I have an unusually strong love for coffee, music, and plants. I have a passion for working on projects that take steps towards making the world more eco-friendly and enjoyable. When I’m not working, I’m playing Dungeons and Dragons with my friends or exploring the city. I love seeing the influence of design in small, everyday interactions and I strive to be a part of improving those experiences with innovative, impactful ideas.</p>
+				<p>I’m a UX design student with an interest in interaction and service design. I have an unusually strong love for coffee, music, and plants. I love seeing the influence of design in small, everyday interactions and I have a passion for working on projects that take steps towards making the world more eco-friendly and enjoyable. When I’m not working, I’m playing Dungeons and Dragons with my friends or hunting for a good local food spot to try (suggestions welcome).</p>
+
+				<p>After working in the service industry for 10 years, I decided to pack up my skills of empathy and understanding and explore the world of design. Pursuing a degree with a focus on User Experience taught me so many new ways to communicate, collaborate, and problem solve with other designers while staying true to what I love: creating a unique experience for unique people.</p>
 
 				<a class="button" href="portfolio.html">Portfolio</a>
 
