--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
 
 				</div>
 
-				<a href="rachellongoria.squarespace.com">rachellongoria.squarespace.com</a>
+				<a href="https://rachellongoria.github.io/portfolio/">rachellongoria.github.io/portfolio</a>
 
 			</div>
 
