--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Rachel Longoria - UX Designer</title>
+		<title>Rachel Longoria</title>
 
 		<link href="main.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito:400,600,800&display=swap" rel="stylesheet">
@@ -19,17 +19,9 @@
 
 		<header>
 
-			<div class="hero">
+			<nav class="navigation">
 
-				<h1>Hi, I'm Rachel Longoria.</h1>
-
-				<p>I'm a UX Designer fueled by coffee and collaboration.</p>
-
-				<a class="button" href="#navigation">Visit my site</button></a>
-
-			</div>
-
-			<nav id="navigation">
+				<a class="nav-logo" href="index.html">Rachel Longoria</a>
 
 				<ul>
 
@@ -46,19 +38,26 @@
 
 		<main class="about-page">
 
-			<img src="images/about-picture.jpg" alt="Rachel Longoria">
+			<div class="hero">
 
-			<div>
+				<h1> A curious UX designer fueled by coffee and collaboration.</h1>
 
-				<h1>Hi, I'm Rachel!</h1>
-
-				<p>I’m a UX design student with an interest in interaction and service design. I have an unusually strong love for coffee, music, and plants. I love seeing the influence of design in small, everyday interactions and I have a passion for working on projects that take steps towards making the world more eco-friendly and enjoyable. When I’m not working, I’m playing Dungeons and Dragons with my friends or hunting for a good local food spot to try (suggestions welcome).</p>
-
-				<p>After working in the service industry for 10 years, I decided to pack up my skills of empathy and understanding and explore the world of design. Pursuing a degree with a focus on User Experience taught me so many new ways to communicate, collaborate, and problem solve with other designers while staying true to what I love: creating a unique experience for unique people.</p>
-
-				<a class="button" href="portfolio.html">Portfolio</a>
+				<img src="images/about-picture.jpg" alt="Rachel Longoria">
 
 			</div>
+
+			<div class="about-info">
+
+				<h2>Hi, I'm Rachel!</h2>
+
+				<p>I'm a dreamer, creator, & designer. After working in the service industry for 10 years, I decided to pack up my skills of empathy and understanding and explore the world of design.</p>
+
+				<p>I'm passionate about environmentalism, learning, and empowering people to be the best version of themselves. I love walking down the street and seeing the influence of design in small, everyday interactions. I daydream about working on projects that make those interactions as user-centric and emotionally-driven as possible. I strongly believe the best way to take big, world changing steps is to start with small, impactful ideas.</p>
+
+				<p>I have an unusually strong love for coffee, music, and plants. In my spare time, you can find me creating a new story arc for my character in Dungeons and Dragons, hunting for a good local food spot to try (suggestions welcome), and playing fetch with my cat, Sushi.</p>
+
+			</div>
+
 
 		</main>
 
